--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/gianordoli/living_variator/issues"
   },
-  "homepage": "https://github.com/gianordoli/living_variator#readme"
+  "homepage": "https://github.com/gianordoli/living_variator#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0"
+  }
 }
