--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "engines": {
-      "node": "4.1.1"
+      "node": "6.4.0",
+      "npm": "3.10.3"
   },  
   "scripts": {
     "start": "node app.js",
