--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.15.2",
     "canvas": "^1.4.0",
     "express": "^4.14.0",
+    "jsonfile": "^2.3.1",
     "socket.io": "^1.4.8"
   }
 }
