--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonfile": "^2.3.1",
+    "lodash": "^4.16.2",
     "socket.io": "^1.4.8"
   }
 }
